--- a/style.css
+++ b/style.css
@@ -579,22 +579,6 @@ video {
   max-width: 48rem;
 }
 
-.max-w-20 {
-  max-width: 5rem;
-}
-
-.max-w-40 {
-  max-width: 10rem;
-}
-
-.max-w-80 {
-  max-width: 20rem;
-}
-
-.max-w-96 {
-  max-width: 24rem;
-}
-
 .content-center {
   align-content: center;
 }
@@ -688,12 +672,22 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
+.from-purple-600 {
+  --tw-gradient-from: #9333ea var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(147 51 234 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
 .to-Lightroyalblue {
   --tw-gradient-to: hsl(241, 81%, 54%) var(--tw-gradient-to-position);
 }
 
 .to-Persianblue {
   --tw-gradient-to: hsla(241, 72%, 46%, 0) var(--tw-gradient-to-position);
+}
+
+.to-indigo-600 {
+  --tw-gradient-to: #4f46e5 var(--tw-gradient-to-position);
 }
 
 .p-10 {
@@ -799,9 +793,8 @@ video {
   }
 }
 
-.hover\:bg-CobaltBlue:hover {
-  --tw-bg-opacity: 1;
-  background-color: hsl(234 85% 45% / var(--tw-bg-opacity));
+.hover\:bg-gradient-to-r:hover {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
 @media (min-width: 600px) {
@@ -816,18 +809,6 @@ video {
 
   .md\:h-screen {
     height: 100vh;
-  }
-
-  .md\:max-w-96 {
-    max-width: 24rem;
-  }
-
-  .md\:max-w-full {
-    max-width: 100%;
-  }
-
-  .md\:max-w-\[22rem\] {
-    max-width: 22rem;
   }
 
   .md\:max-w-\[360px\] {
